--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple Node.js application",
   "scripts": {
     "start": "node app.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles" 
   },
   "dependencies": {
     "express": "^4.18.2"
